--- a/.github/workflows/smoke-windows-cygwin.yml
+++ b/.github/workflows/smoke-windows-cygwin.yml
@@ -74,13 +74,14 @@ jobs:
             path c:\tools\cygwin\bin
             c:\tools\cygwin\bin\sh.exe -c "pwd; echo $PATH; make -j2 test_prep"
       - name: Run unprivileged FS stat tests
+        # https://stackoverflow.com/questions/20218076/batch-file-drop-elevated-privileges-run-a-command-as-original-user
         shell: cmd
         run: |
-            path c:\tools\cygwin\bin
-            cygdrop sh -c "cd t; ../perl -I../lib op/stat.t"
-            cygdrop sh -c "cd t; ../perl -I../lib ../lib/File/stat.t"
-            cygdrop sh -c "cd t; ../perl -I../lib ../lib/File/Copy.t"
-            cygdrop sh -c "cd t; ../perl -I../lib ../cpan/ExtUtils-MakeMaker/t/fixin.t"
+            path C:\Windows\System32;c:\tools\cygwin\bin
+            runas /trustlevel:0x20000 sh -c "cd t; ../perl -I../lib op/stat.t"
+            @rem runas /trustlevel:0x20000 sh -c "cd t; ../perl -I../lib ../lib/File/stat.t"
+            @rem runas /trustlevel:0x20000 sh -c "cd t; ../perl -I../lib ../lib/File/Copy.t"
+            @rem runas /trustlevel:0x20000 sh -c "cd t; ../perl -I../lib ../cpan/ExtUtils-MakeMaker/t/fixin.t"
       - name: Run Tests
         shell: cmd
         run: |
