Compare the output of `id` with the output of `psexec64 -l id`
... just for laughs

--- a/.github/workflows/smoke-windows-cygwin.yml
+++ b/.github/workflows/smoke-windows-cygwin.yml
@@ -58,6 +58,12 @@ jobs:
         run: |
             path c:\tools\cygwin\bin
             id
+      - name: id (low privilege via psexec)
+        shell: cmd
+        run: |
+            path c:\tools\cygwin\bin;C:\ProgramData\chocolatey\lib\sysinternals\tools
+            psexec64 -l "sh -c id>/cygdrive/d/a/perl5/perl5/tmp.log"
+            type tmp.log
       - name: "Strip/reset permissions"
         shell: cmd
         run: |
