--- a/.github/workflows/smoke-linux.yml
+++ b/.github/workflows/smoke-linux.yml
@@ -27,6 +27,7 @@ jobs:
               - "-DPERL_GLOBAL_STRUCT_PRIVATE"
               - "-Duseshrplib -Dusesitecustomize -Duselongdouble PERL_UNICODE='' LANG='en_US.UTF-8'"
               - "-Duseshrplib -Dusequadmath -Dusecbacktrace -Dusethreads PERL_UNICODE='' LANG='de_DE.UTF-8'"
+              - "-Duserelocatableinc"
 
     steps:
       - uses: actions/checkout@master
