Disable dist/IO/t/io_sock.t on windows
Fixes #17429

Test is out of sequence.
Note: ENV were set too early.

--- a/.github/workflows/smoke-windows-msvc142.yml
+++ b/.github/workflows/smoke-windows-msvc142.yml
@@ -8,11 +8,11 @@ on:
       - '*'
   pull_request:
 
-env:
-    PERL_SKIP_TTY_TEST: 1
-
 jobs:
   perl:
+    env:
+        PERL_SKIP_TTY_TEST: 1
+        CONTINUOUS_INTEGRATION: 1
 
     runs-on: windows-latest
 
