Define env correctly for GitHub workflow jobs
Environment variables were defined too early.
This is moving them inside the job, and add
the CONTINUOUS_INTEGRATION=1 variable.

--- a/.github/workflows/smoke-information.yml
+++ b/.github/workflows/smoke-information.yml
@@ -8,13 +8,14 @@ on:
       - '*'
   pull_request:
 
-env:
-    PERL_SKIP_TTY_TEST: 1
-
 jobs:
   authors:
 
     runs-on: ubuntu-latest
+
+    env:
+        PERL_SKIP_TTY_TEST: 1
+        CONTINUOUS_INTEGRATION: 1
 
     steps:
       - uses: actions/checkout@master
