--- a/.github/workflows/smoke-windows-cygwin.yml
+++ b/.github/workflows/smoke-windows-cygwin.yml
@@ -13,6 +13,10 @@ jobs:
 
     runs-on: windows-latest
 
+    env:
+        PERL_SKIP_TTY_TEST: 1
+        CONTINUOUS_INTEGRATION: 1
+
     steps:
       - run: git config --global core.autocrlf false
       - name: Set up Cygwin
