--- a/.github/workflows/smoke-windows-msvc100.yml
+++ b/.github/workflows/smoke-windows-msvc100.yml
@@ -8,13 +8,15 @@ on:
       - '*'
   pull_request:
 
-env:
-    PERL_SKIP_TTY_TEST: 1
 
 jobs:
   perl:
 
     runs-on: windows-latest
+
+    env:
+        PERL_SKIP_TTY_TEST: 1
+        CONTINUOUS_INTEGRATION: 1
 
     steps:
       - run: git config --global core.autocrlf false
