--- a/.github/workflows/smoke-macos-xcode11.yml
+++ b/.github/workflows/smoke-macos-xcode11.yml
@@ -8,13 +8,13 @@ on:
       - '*'
   pull_request:
 
-env:
-    PERL_SKIP_TTY_TEST: 1
-
 jobs:
   perl:
-
     runs-on: macos-latest
+
+    env:
+        PERL_SKIP_TTY_TEST: 1
+        CONTINUOUS_INTEGRATION: 1
 
     steps:
       - uses: actions/checkout@master
