--- a/.github/workflows/smoke-linux.yml
+++ b/.github/workflows/smoke-linux.yml
@@ -29,14 +29,20 @@ jobs:
               - "-Duseshrplib -Dusesitecustomize -Duselongdouble PERL_UNICODE='' LANG='en_US.UTF-8'"
               - "-Duseshrplib -Dusequadmath -Dusecbacktrace -Dusethreads PERL_UNICODE='' LANG='de_DE.UTF-8'"
               - "-Duserelocatableinc"
+              - "-Dcc='clang'"
+              - "-Dcc='gcc' -Accflags='-m32' -Aldflags='-m32' -Alddlflags='-shared -m32'"
 
     steps:
       - uses: actions/checkout@master
         with:
             fetch-depth: 10
+      - name: Install 32bit dependencies
+        run: |
+            sudo dpkg --add-architecture i386
+            sudo apt-get -y install gcc-multilib
       - name: Configure
         run: |
-            sh ./Configure -des -Dusedevel ${{ matrix.CONFIGURE_ARGS }} -Dprefix=$HOME/perl-blead -DDEBUGGING
+            ./Configure -des -Dusedevel ${{ matrix.CONFIGURE_ARGS }} -Dprefix="$HOME/perl-blead" -DDEBUGGING
       - name: Build
         run: |
             make -j2
