CI do not abort a build too early
Currently the 32bit smokers are broken due to some
deps issues. We could consider disable them but it's
better that they do not impact other smokers.

--- a/.github/workflows/smoke-linux.yml
+++ b/.github/workflows/smoke-linux.yml
@@ -19,6 +19,7 @@ jobs:
         CONTINUOUS_INTEGRATION: 1
 
     strategy:
+        fail-fast: false
         matrix:
             # exercise a variety of build options
             # threads often cause build issues
