--- a/.github/workflows/smoke-linux-i386.yml
+++ b/.github/workflows/smoke-linux-i386.yml
@@ -1,4 +1,4 @@
-name: smoke-linux
+name: smoke-linux-i386
 
 on:
   push:
@@ -14,9 +14,12 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 120
 
-    env:
-        PERL_SKIP_TTY_TEST: 1
-        CONTINUOUS_INTEGRATION: 1
+    # https://hub.docker.com/r/i386/ubuntu/
+    container:
+        image: i386/ubuntu:latest
+        env:
+          PERL_SKIP_TTY_TEST: 1
+          CONTINUOUS_INTEGRATION: 1
 
     strategy:
         fail-fast: false
@@ -24,18 +27,16 @@ jobs:
             # exercise a variety of build options
             # threads often cause build issues
             CONFIGURE_ARGS:
-              - "-Uusethreads"
-              - "-Dusethreads"
-              - "-DPERL_GLOBAL_STRUCT_PRIVATE"
-              - "-Duseshrplib -Dusesitecustomize -Duselongdouble PERL_UNICODE='' LANG='en_US.UTF-8'"
-              - "-Duseshrplib -Dusequadmath -Dusecbacktrace -Dusethreads PERL_UNICODE='' LANG='de_DE.UTF-8'"
-              - "-Duserelocatableinc"
-              - "-Dcc='clang'"
+              - "-Dusedevel"
 
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v1
         with:
             fetch-depth: 10
+      - name: Install System dependencies
+        run: |
+            apt-get update ||:
+            apt-get -y install build-essential
       - name: Configure
         run: |
             ./Configure -des -Dusedevel ${{ matrix.CONFIGURE_ARGS }} -Dprefix="$HOME/perl-blead" -DDEBUGGING
