--- a/META.yml
+++ b/META.yml
@@ -14,6 +14,7 @@ no_index:
   directory:
     - cpan
     - dist/Attribute-Handlers
+    - dist/AutoLoader
     - dist/autouse
     - dist/base
     - dist/Carp
