--- a/plan9/config_sh.sample
+++ b/plan9/config_sh.sample
@@ -538,6 +538,7 @@ d_sitearch='define'
 d_snprintf='undef'
 d_sockaddr_in6='undef'
 d_sockaddr_sa_len='undef'
+d_sockaddr_storage='undef'
 d_sockatmark='undef'
 d_sockatmarkproto='undef'
 d_socket='define'
