--- a/.github/workflows/testsuite.yml
+++ b/.github/workflows/testsuite.yml
@@ -9,7 +9,6 @@ on:
   pull_request:
 
 jobs:
-
   #  ___           _         ___       __                    _   _
   # / __|_ __  ___| |_____  |_ _|_ _  / _|___ _ _ _ __  __ _| |_(_)___ _ _  ___
   # \__ \ '  \/ _ \ / / -_)  | || ' \|  _/ _ \ '_| '  \/ _` |  _| / _ \ ' \(_-<
@@ -55,9 +54,12 @@ jobs:
       PERL_SKIP_TTY_TEST: 1
       CONTINUOUS_INTEGRATION: 1
       WORKSPACE: ${{ github.workspace }}
-      CONFIGURE_ARGS: "-Dusethreads"
 
     steps:
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
@@ -67,7 +69,9 @@ jobs:
           git fetch --depth=1 origin +refs/tags/*:refs/tags/*
       - name: Configure
         run: |
-          ./Configure -des -Dusedevel ${{ matrix.CONFIGURE_ARGS }} -Dprefix="$HOME/perl-blead" -DDEBUGGING
+          ./Configure -des -Dusedevel ${CONFIGURE_ARGS} -Dprefix="$HOME/perl-blead" -DDEBUGGING
+        env:
+          CONFIGURE_ARGS: "-Dusethreads"
       - name: Build
         run: |
           make -j2
