--- a/.github/workflows/irc-notifications.yaml
+++ b/.github/workflows/irc-notifications.yaml
@@ -56,19 +56,33 @@ jobs:
             ${{ join(github.event.commits.*.message, '\n') }}\n\
             ${{ github.event.compare }}"
 
-      - name: irc pull request
+      - name: irc opened pull request
         uses: rectalogic/notify-irc@v1
-        if: github.event_name == 'pull_request'
+        if: github.event_name == 'pull_request' && github.event.action == 'opened'
         with:
           server: ${{ env.server }}
           port: ${{ env.port }}
           channel: ${{ env.channel }}
           nickname: Pull-Request
           message:
-            "\x037${{ github.actor }}\x0F opened/updated PR #${{ github.event.pull_request.number }}\n\
+            "\x037${{ github.actor }}\x0F opened PR #${{ github.event.pull_request.number }}\n\
             ${{ github.event.pull_request.title }}\n\
             ${{ github.event.pull_request.body }}\n\
-            \x0313${{ github.event.pull_request.html.href }}\x0F"
+            ${{ github.event.pull_request.html_url }}"
+
+      - name: irc synchronize pull request
+        uses: rectalogic/notify-irc@v1
+        if: github.event_name == 'pull_request' && github.event.action == 'synchronize'
+        with:
+          server: ${{ env.server }}
+          port: ${{ env.port }}
+          channel: ${{ env.channel }}
+          nickname: Pull-Request
+          message:
+            "\x037${{ github.actor }}\x0F updated PR #${{ github.event.pull_request.number }}\n\
+            ${{ github.event.pull_request.title }}\n\
+            ${{ github.event.pull_request.html_url }}"
+
       # steps:
       # - name: Pull request merged
       #   if: github.action == 'closed' && github.pull_request.merged == 'true'
