Add the Configure option to enable strict by default in perl programs.
Do not set strict by default on -e or -E

This is a development only feature to allow us to clean up blead.

./Configure -Dusedevel -des -Dusedefaultstrict

--- a/plan9/config_sh.sample
+++ b/plan9/config_sh.sample
@@ -1095,6 +1095,7 @@ use64bitall='undef'
 use64bitint='undef'
 usecbacktrace='undef'
 usecrosscompile='undef'
+usedefaultstrict='undef'
 usedevel='undef'
 usedl='undef'
 usedtrace='undef'
